# g6-cac

./: .code-workspace  .gitignore  ADRS.md  AGENTS.md  API_ENDPOINTS.md  ARCHITECTURE.md  AUDIT-PLAN.md  CLEANUP-MIGRATION.md  CONSTRAINTS.md  CONTRAINTES.md  Contexte.md  DEMO-SCRIPT.md  PHASE2-PLAN.md  PROJECT-STATUS.md  README.md  README_POC.md  SPECS.md  USER_STORIES.md  context.md  demo-commands.sh  pyproject.toml  schemas.xml
audits/: 2026-02-27-phase1-complete.md  README.md
diagrams/: architecture.drawio
docs/: AUDIT-VALIDATION.md  CODING-STANDARDS.md  DEMO-OPERATING-MODE.md  PRESENTATION-HIERARCHICAL-FLEET.md  STRATEGIC-PROPOSAL-CaC-Platform.md
examples/: config-direct.yaml  config-director.yaml  generate_config.py
examples/dumps/: bank-a-dn-bank-a-01-config.json  bank-a-dn-bank-a-02-config.json  bank-a-prod-api-payload.json  bank-a-sh-bank-a-01-config.json  bank-b-dn-bank-b-01-config.json  bank-b-dn-bank-b-02-config.json  bank-b-prod-api-payload.json  bank-b-sh-bank-b-01-config.json
examples/simple/: 01-repos.yaml  02-routing.yaml  03-normalization.yaml  04-processing.yaml
lpcac/: __init__.py  main.py
lpcac/connectors/: __init__.py  director.py
specs/: 00-VISION.md  01-ARCHITECTURE-LOGPOINT.md  10-INVENTORY-FLEET.md  10-INVENTORY-PARC.md  20-TEMPLATE-HIERARCHY.md  30-PROCESSING-POLICIES.md  40-CLI-WORKFLOW.md  50-VALIDATION-SPEC.md  99-ROADMAP.md  API-REFERENCE.md  CHANGES-TEMPLATE-HIERARCHY.md
tests/: test_core_interpolator.py  test_core_merger.py  test_models_fleet.py  test_models_template.py  test_providers.py  test_yaml_utils.py
(+49 files in other folders)
